--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <!-- reference to the client script -->
-        <script type="module" src="./client.imba"></script>
+        <script type="module" src="./app.imba"></script>
     </body>
 </html>
